# imgtxt

./: .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  SPEC_TEST.md  pyproject.toml
.github/workflows/: ci.yml
font-roboto-0.0.1/: CHANGELOG.txt  MANIFEST.in  PKG-INFO  README.rst  setup.py
imgtxt/: __init__.py  cli.py  converter.py  utils.py
imgtxt/data/: ansi_palettes.toml  emoji_colors.json  unicode_brightness.txt
scripts/precompute/: README.md  build_emoji_colors.py  build_unicode_brightness.py
tests/functional/: cases.toml  conftest.py  test_convert.py
tests/functional/fixtures/expected/: checkerboard_block_mono_w20.txt  gradient_ascii_mono_w20.txt  gradient_braille_mono_w20.txt  gradient_sextant_mono_w20.txt
tests/unit/: test_cli.py  test_converter.py  test_utils.py
